refactor: keep shared sources compilable as Java 17
The 1.20.1 build target requires a Java 17 language level, so replace
the Java 21 SequencedCollection accessors (getFirst/getLast/removeLast)
with indexed equivalents and rewrite the one record-pattern switch over
Result in BlockPalette as an instanceof chain.